--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ svg {
     background-color: rgb(215, 226, 236);
     padding-left: 30px;
     padding-right: 30px;
-    width: 1200px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     
@@ -112,4 +112,9 @@ margin-bottom: 5px;
   align-items: flex-end;
   margin-right: 50px;
 
+}
+.Total__Sum{
+display:block;
+font-size: 40px;
+font-weight: bold;
 }
