finished all tasks finished all tasks

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,8 @@ svg {
     background-color: rgb(215, 226, 236);
     padding-left: 30px;
     padding-right: 30px;
+    padding-top: 30px;
+padding-bottom: 30px;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
@@ -106,6 +108,7 @@ margin-bottom: 5px;
   font-weight: 700
 }
 .Total__Sum__Container{
+position: relative;
   display: flex;
   flex-direction: column;
   text-align: end;
@@ -117,4 +120,11 @@ margin-bottom: 5px;
 display:block;
 font-size: 40px;
 font-weight: bold;
+}
+.Card__Button__Submit {
+  /* position: absolute;
+bottom : 50px; */
+
+  display: flex; 
+  justify-content: center;
 }
